tests/machine/x/java/left_join.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsleft_join1908293222/001/Main.java:20: error: illegal start of type
	return _res0;
	^
/tmp/TestCompileValidProgramsleft_join1908293222/001/Main.java:20: error: <identifier> expected
	return _res0;
	            ^
/tmp/TestCompileValidProgramsleft_join1908293222/001/Main.java:21: error: ')' expected
}}).get();
 ^
/tmp/TestCompileValidProgramsleft_join1908293222/001/Main.java:21: error: class, interface, enum, or record expected
}}).get();
  ^
/tmp/TestCompileValidProgramsleft_join1908293222/001/Main.java:22: error: unnamed classes are a preview feature and are disabled by default.
	public static void main(String[] args) {
	              ^
  (use --enable-preview to enable unnamed classes)
/tmp/TestCompileValidProgramsleft_join1908293222/001/Main.java:28: error: class, interface, enum, or record expected
}
^
6 errors


  1| let customers = [
  2|   { id: 1, name: "Alice" },